@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-20T08:09:09Z",
+  "timestamp" : "2023-07-21T00:41:04Z",
   "count_outdated" : 1267,
   "uniques_outdated" : 679,
-  "count" : 1292,
+  "count" : 1293,
   "uniques" : 694,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
