@@ -1,3 +1,12 @@
+2023-07-21T00:41:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5617299526 # 1748
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
+* notice: last 14d: unq all: 3 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 679 1267 / 694 1292
+* notice: next accum: outdated-unq outdated-all / unq all: 679 1267 / 694 1293
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-07-20]
+
 2023-07-20T08:09:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5608498695 # 1746
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
